Fix some layout issues

--- a/pfeffel.css
+++ b/pfeffel.css
@@ -9,6 +9,16 @@ body {
 
 }
 
+h1 {
+  margin: 0;
+}
+
+.tagline {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 0;
+}
+
 hr {
   width: 33%;
   border: 1px dotted grey;
